// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformer generates types for fastify-swagger correctly 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "description": "Sample backend service",
    "title": "SampleApi",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/delete": {
      "delete": {
        "description": "delete route",
        "responses": {
          "204": {
            "content": {
              "application/json": {
                "schema": {
                  "description": "Empty response",
                  "not": {},
                },
              },
            },
            "description": "Empty response",
          },
        },
      },
    },
    "/login": {
      "post": {
        "description": "login route",
        "externalDocs": {
          "description": "check google",
          "url": "https://google.com",
        },
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "password": {
                    "maxLength": 32,
                    "type": "string",
                  },
                  "seed": {
                    "exclusiveMinimum": true,
                    "minimum": 0,
                    "type": "number",
                  },
                  "username": {
                    "description": "someDescription",
                    "maxLength": 32,
                    "type": "string",
                  },
                },
                "required": [
                  "username",
                  "seed",
                  "password",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string",
                },
              },
            },
            "description": "Default Response",
          },
          "401": {
            "content": {
              "application/json": {
                "schema": {
                  "additionalProperties": false,
                  "properties": {
                    "required_role": {
                      "enum": [
                        "admin",
                      ],
                      "type": "string",
                    },
                  },
                  "required": [
                    "required_role",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Default Response",
          },
        },
        "summary": "login your account",
        "tags": [
          "auth",
        ],
      },
    },
    "/no-schema": {
      "post": {
        "responses": {
          "200": {
            "description": "Default Response",
          },
        },
      },
    },
  },
  "servers": [],
}
`;

exports[`transformer should not generate ref 1`] = `
{
  "components": {
    "schemas": {},
  },
  "info": {
    "description": "Sample backend service",
    "title": "SampleApi",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/login": {
      "post": {
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "additionalProperties": false,
                "properties": {
                  "access_token": {
                    "maxLength": 12,
                    "minLength": 12,
                    "type": "string",
                  },
                  "refresh_token": {
                    "maxLength": 12,
                    "minLength": 12,
                    "type": "string",
                  },
                },
                "required": [
                  "access_token",
                  "refresh_token",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "description": "Default Response",
          },
        },
      },
    },
  },
  "servers": [],
}
`;
